Fix: line break when text is too long

--- a/htdocs/styles/src/global/tabbed.scss
+++ b/htdocs/styles/src/global/tabbed.scss
@@ -1,19 +1,21 @@
 /* Global styles for tabbed presentation */
 fieldset.tabbed,div.tabbed {
 	border-radius: 0.4rem;
-	margin-bottom: 15px;
+	margin-bottom: 1rem;
 	
 	div {
-		margin-top: 5px;
-		margin-bottom: 5px;
+		margin-top: 0.5rem;
+		margin-bottom: 0.5rem;
 	
 		div:nth-child(1) {
+			vertical-align: top;
 			margin: 0px;
-			min-width: 22em;
+			min-width: 15rem;
 			display: inline-block;
 		}
 		
 		div:nth-child(2) {
+			width: calc(100% - 15rem);
 			margin: 0px;
 			font-weight: bold;
 			display: inline-block;
